; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/lcms2/src/extr_cmspack.c_PackHalfFrom16.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/lcms2/src/extr_cmspack.c_PackHalfFrom16.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32, %struct.TYPE_3__*, i64*, i32*, i32)* @PackHalfFrom16 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @PackHalfFrom16(i32 %0, %struct.TYPE_3__* %1, i64* %2, i32* %3, i32 %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.TYPE_3__*, align 8
  %9 = alloca i64*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca float, align 4
  %20 = alloca float, align 4
  %21 = alloca i64*, align 8
  %22 = alloca i32, align 4
  %23 = alloca i32, align 4
  %24 = alloca i32, align 4
  store i32 %0, i32* %7, align 4
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** %8, align 8
  store i64* %2, i64** %9, align 8
  store i32* %3, i32** %10, align 8
  store i32 %4, i32* %11, align 4
  %25 = load %struct.TYPE_3__*, %struct.TYPE_3__** %8, align 8
  %26 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = call i32 @T_CHANNELS(i32 %27)
  store i32 %28, i32* %12, align 4
  %29 = load %struct.TYPE_3__*, %struct.TYPE_3__** %8, align 8
  %30 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = call i32 @T_DOSWAP(i32 %31)
  store i32 %32, i32* %13, align 4
  %33 = load %struct.TYPE_3__*, %struct.TYPE_3__** %8, align 8
  %34 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %33, i32 0, i32 0
  %35 = load i32, i32* %34, align 4
  %36 = call i32 @T_FLAVOR(i32 %35)
  store i32 %36, i32* %14, align 4
  %37 = load %struct.TYPE_3__*, %struct.TYPE_3__** %8, align 8
  %38 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %37, i32 0, i32 0
  %39 = load i32, i32* %38, align 4
  %40 = call i32 @T_EXTRA(i32 %39)
  store i32 %40, i32* %15, align 4
  %41 = load %struct.TYPE_3__*, %struct.TYPE_3__** %8, align 8
  %42 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %41, i32 0, i32 0
  %43 = load i32, i32* %42, align 4
  %44 = call i32 @T_SWAPFIRST(i32 %43)
  store i32 %44, i32* %16, align 4
  %45 = load %struct.TYPE_3__*, %struct.TYPE_3__** %8, align 8
  %46 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %45, i32 0, i32 0
  %47 = load i32, i32* %46, align 4
  %48 = call i32 @T_PLANAR(i32 %47)
  store i32 %48, i32* %17, align 4
  %49 = load i32, i32* %13, align 4
  %50 = load i32, i32* %16, align 4
  %51 = xor i32 %49, %50
  store i32 %51, i32* %18, align 4
  %52 = load %struct.TYPE_3__*, %struct.TYPE_3__** %8, align 8
  %53 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %52, i32 0, i32 0
  %54 = load i32, i32* %53, align 4
  %55 = call i64 @IsInkSpace(i32 %54)
  %56 = icmp ne i64 %55, 0
  %57 = zext i1 %56 to i64
  %58 = select i1 %56, float 0x40847ACCC0000000, float 6.553500e+04
  store float %58, float* %19, align 4
  store float 0.000000e+00, float* %20, align 4
  %59 = load i32*, i32** %10, align 8
  %60 = bitcast i32* %59 to i64*
  store i64* %60, i64** %21, align 8
  store i32 0, i32* %23, align 4
  %61 = load %struct.TYPE_3__*, %struct.TYPE_3__** %8, align 8
  %62 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %61, i32 0, i32 0
  %63 = load i32, i32* %62, align 4
  %64 = call i32 @PixelSize(i32 %63)
  %65 = load i32, i32* %11, align 4
  %66 = sdiv i32 %65, %64
  store i32 %66, i32* %11, align 4
  %67 = load i32, i32* %18, align 4
  %68 = icmp ne i32 %67, 0
  br i1 %68, label %69, label %71

69:                                               ; preds = %5
  %70 = load i32, i32* %15, align 4
  store i32 %70, i32* %23, align 4
  br label %71

71:                                               ; preds = %69, %5
  store i32 0, i32* %22, align 4
  br label %72

72:                                               ; preds = %128, %71
  %73 = load i32, i32* %22, align 4
  %74 = load i32, i32* %12, align 4
  %75 = icmp slt i32 %73, %74
  br i1 %75, label %76, label %131

76:                                               ; preds = %72
  %77 = load i32, i32* %13, align 4
  %78 = icmp ne i32 %77, 0
  br i1 %78, label %79, label %84

79:                                               ; preds = %76
  %80 = load i32, i32* %12, align 4
  %81 = load i32, i32* %22, align 4
  %82 = sub nsw i32 %80, %81
  %83 = sub nsw i32 %82, 1
  br label %86

84:                                               ; preds = %76
  %85 = load i32, i32* %22, align 4
  br label %86

86:                                               ; preds = %84, %79
  %87 = phi i32 [ %83, %79 ], [ %85, %84 ]
  store i32 %87, i32* %24, align 4
  %88 = load i64*, i64** %9, align 8
  %89 = load i32, i32* %24, align 4
  %90 = sext i32 %89 to i64
  %91 = getelementptr inbounds i64, i64* %88, i64 %90
  %92 = load i64, i64* %91, align 8
  %93 = sitofp i64 %92 to float
  %94 = load float, float* %19, align 4
  %95 = fdiv float %93, %94
  store float %95, float* %20, align 4
  %96 = load i32, i32* %14, align 4
  %97 = icmp ne i32 %96, 0
  br i1 %97, label %98, label %102

98:                                               ; preds = %86
  %99 = load float, float* %19, align 4
  %100 = load float, float* %20, align 4
  %101 = fsub float %99, %100
  store float %101, float* %20, align 4
  br label %102

102:                                              ; preds = %98, %86
  %103 = load i32, i32* %17, align 4
  %104 = icmp ne i32 %103, 0
  br i1 %104, label %105, label %117

105:                                              ; preds = %102
  %106 = load float, float* %20, align 4
  %107 = call i64 @_cmsFloat2Half(float %106)
  %108 = load i32*, i32** %10, align 8
  %109 = bitcast i32* %108 to i64*
  %110 = load i32, i32* %22, align 4
  %111 = load i32, i32* %23, align 4
  %112 = add nsw i32 %110, %111
  %113 = load i32, i32* %11, align 4
  %114 = mul nsw i32 %112, %113
  %115 = sext i32 %114 to i64
  %116 = getelementptr inbounds i64, i64* %109, i64 %115
  store i64 %107, i64* %116, align 8
  br label %127

117:                                              ; preds = %102
  %118 = load float, float* %20, align 4
  %119 = call i64 @_cmsFloat2Half(float %118)
  %120 = load i32*, i32** %10, align 8
  %121 = bitcast i32* %120 to i64*
  %122 = load i32, i32* %22, align 4
  %123 = load i32, i32* %23, align 4
  %124 = add nsw i32 %122, %123
  %125 = sext i32 %124 to i64
  %126 = getelementptr inbounds i64, i64* %121, i64 %125
  store i64 %119, i64* %126, align 8
  br label %127

127:                                              ; preds = %117, %105
  br label %128

128:                                              ; preds = %127
  %129 = load i32, i32* %22, align 4
  %130 = add nsw i32 %129, 1
  store i32 %130, i32* %22, align 4
  br label %72

131:                                              ; preds = %72
  %132 = load i32, i32* %15, align 4
  %133 = icmp eq i32 %132, 0
  br i1 %133, label %134, label %150

134:                                              ; preds = %131
  %135 = load i32, i32* %16, align 4
  %136 = icmp ne i32 %135, 0
  br i1 %136, label %137, label %150

137:                                              ; preds = %134
  %138 = load i64*, i64** %21, align 8
  %139 = getelementptr inbounds i64, i64* %138, i64 1
  %140 = load i64*, i64** %21, align 8
  %141 = load i32, i32* %12, align 4
  %142 = sub nsw i32 %141, 1
  %143 = sext i32 %142 to i64
  %144 = mul i64 %143, 8
  %145 = trunc i64 %144 to i32
  %146 = call i32 @memmove(i64* %139, i64* %140, i32 %145)
  %147 = load float, float* %20, align 4
  %148 = call i64 @_cmsFloat2Half(float %147)
  %149 = load i64*, i64** %21, align 8
  store i64 %148, i64* %149, align 8
  br label %150

150:                                              ; preds = %137, %134, %131
  %151 = load %struct.TYPE_3__*, %struct.TYPE_3__** %8, align 8
  %152 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %151, i32 0, i32 0
  %153 = load i32, i32* %152, align 4
  %154 = call i32 @T_PLANAR(i32 %153)
  %155 = icmp ne i32 %154, 0
  br i1 %155, label %156, label %159

156:                                              ; preds = %150
  %157 = load i32*, i32** %10, align 8
  %158 = getelementptr inbounds i32, i32* %157, i64 8
  store i32* %158, i32** %6, align 8
  br label %167

159:                                              ; preds = %150
  %160 = load i32*, i32** %10, align 8
  %161 = load i32, i32* %12, align 4
  %162 = load i32, i32* %15, align 4
  %163 = add nsw i32 %161, %162
  %164 = sext i32 %163 to i64
  %165 = mul i64 %164, 8
  %166 = getelementptr inbounds i32, i32* %160, i64 %165
  store i32* %166, i32** %6, align 8
  br label %167

167:                                              ; preds = %159, %156
  %168 = load i32*, i32** %6, align 8
  ret i32* %168
}

declare dso_local i32 @T_CHANNELS(i32) #1

declare dso_local i32 @T_DOSWAP(i32) #1

declare dso_local i32 @T_FLAVOR(i32) #1

declare dso_local i32 @T_EXTRA(i32) #1

declare dso_local i32 @T_SWAPFIRST(i32) #1

declare dso_local i32 @T_PLANAR(i32) #1

declare dso_local i64 @IsInkSpace(i32) #1

declare dso_local i32 @PixelSize(i32) #1

declare dso_local i64 @_cmsFloat2Half(float) #1

declare dso_local i32 @memmove(i64*, i64*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
